--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -8,8 +8,16 @@
     align-items: center;
 }
 
+/* Global styles */
+
 p,h1 {
     &.center {
         text-align: center;
     }
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
 }
