--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,23 +1,24 @@
 /* Utils */
 
 .full-center {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+	width: 100%;
+	height: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
 /* Global styles */
 
-p,h1 {
-    &.center {
-        text-align: center;
-    }
+p,
+h1 {
+	&.center {
+		text-align: center;
+	}
 }
 
 form {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
+	display: flex;
+	flex-direction: column;
+	gap: 1rem;
 }
