--- a/src/layouts/game/game.layout.module.css
+++ b/src/layouts/game/game.layout.module.css
@@ -9,7 +9,11 @@
 .header {
 	width: 100%;
 	height: 4rem;
-	background-color: red;
+
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	margin: 0 1rem;
 }
 
 .content {
