--- a/src/layouts/game/game.layout.module.css
+++ b/src/layouts/game/game.layout.module.css
@@ -10,10 +10,10 @@
 	width: 100%;
 	height: 4rem;
 
+	flex-wrap: wrap;
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
-	margin: 0 1rem;
 }
 
 .content {
