--- a/src/features/game/components/config/moles-amount-selector.module.css
+++ b/src/features/game/components/config/moles-amount-selector.module.css
@@ -1,3 +1,11 @@
 .icon {
-	width: 2.5rem;
+	width: 1.5rem;
+}
+
+.moles-indicator {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	gap: 0;
 }
